Plant enemy added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <img id="layer4" class="hidden" src="./assets/bg/layer-4.png" alt="">
     <img id="layer5" class="hidden" src="./assets/bg/layer-5.png" alt="">
     <img id="enemy1" class="hidden" src="./assets/enemy/enemy_fly.png" alt="">
+    <img id="enemy2" class="hidden" src="./assets/enemy/enemy_plant.png" alt="">
     <img id="fire" class="hidden" src="./assets/fire.png" alt="">
     <img id="boom" class="hidden" src="./assets/boom.png" alt="">
 
