--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <img id="enemy2" class="hidden" src="./assets/enemy/enemy_plant.png" alt="">
     <img id="fire" class="hidden" src="./assets/fire.png" alt="">
     <img id="boom" class="hidden" src="./assets/boom.png" alt="">
+    <img id="heart" class="hidden" src="./assets/heart.png" alt="">
 
     <script type="module" src="./js/index.js"></script>
 </body>
